# linear_regression_with_streamlit

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
data/: df_train.parquet
models_artefacts/: feature_names.pkl  miss_imputer.pkl  model.pkl  ohe_encoder.pkl  scaler.pkl
pages/: 1_Отображение ключевых графиков EDA.py  2_Предсказание стоимости для одного автомобиля по внесенным данным.py  3_Предсказание стоимости автомобилей по csv-данным.py  4_Визуализация весов обученной модели.py
