[project]
name = "streamlit-deploy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "catboost==1.2.8",
    "joblib==1.3.2",
    "matplotlib==3.7.2",
    "openpyxl>=3.1.5",
    "pandas==2.0.3",
    "plotly==5.17.0",
    "scikit-learn==1.3.0",
    "seaborn==0.12.2",
    "streamlit==1.28.0",
]
